ot/indic_machine.go
//line indic_machine.rl:1
// Copyright 2011,2012 Google, Inc.
// Ported to Go for textshape.
//
// HarfBuzz equivalent: hb-ot-shaper-indic-machine.rl

package ot

//line indic_machine.go:12
const indicSyllableMachine_start int = 31
const indicSyllableMachine_first_final int = 31
const indicSyllableMachine_error int = -1

const indicSyllableMachine_en_main int = 31

//line indic_machine.rl:12

//line indic_machine.rl:74

// FindSyllablesIndic finds Indic syllable boundaries in the buffer.
// It sets info[i].Syllable to (serial << 4 | type) for each glyph.
// HarfBuzz equivalent: find_syllables_indic() in hb-ot-shaper-indic-machine.hh
func FindSyllablesIndic(info []IndicInfo) (hasBroken bool) {
	if len(info) == 0 {
		return false
	}

	// Build category array
	data := make([]byte, len(info))
	for i := range info {
		data[i] = byte(info[i].Category)
	}

	var cs, p, pe, eof, ts, te, act int
	_ = act // Suppress unused variable warning

	pe = len(data)
	eof = pe

	var syllableSerial uint8 = 1

	foundSyllable := func(syllableType IndicSyllableType) {
		for i := ts; i < te; i++ {
			info[i].Syllable = (syllableSerial << 4) | uint8(syllableType)
		}
		syllableSerial++
		if syllableSerial == 16 {
			syllableSerial = 1
		}
	}

//line indic_machine.go:60
	{
		cs = indicSyllableMachine_start
		ts = 0
		te = 0
		act = 0
	}

//line indic_machine.go:68
	{
		if p == pe {
			goto _test_eof
		}
		switch cs {
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 36:
			goto st_case_36
		case 0:
			goto st_case_0
		case 37:
			goto st_case_37
		case 38:
			goto st_case_38
		case 39:
			goto st_case_39
		case 40:
			goto st_case_40
		case 41:
			goto st_case_41
		case 1:
			goto st_case_1
		case 42:
			goto st_case_42
		case 2:
			goto st_case_2
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 45:
			goto st_case_45
		case 3:
			goto st_case_3
		case 46:
			goto st_case_46
		case 4:
			goto st_case_4
		case 47:
			goto st_case_47
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 5:
			goto st_case_5
		case 50:
			goto st_case_50
		case 6:
			goto st_case_6
		case 51:
			goto st_case_51
		case 52:
			goto st_case_52
		case 53:
			goto st_case_53
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 58:
			goto st_case_58
		case 59:
			goto st_case_59
		case 7:
			goto st_case_7
		case 60:
			goto st_case_60
		case 8:
			goto st_case_8
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 9:
			goto st_case_9
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 10:
			goto st_case_10
		case 69:
			goto st_case_69
		case 11:
			goto st_case_11
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 72:
			goto st_case_72
		case 73:
			goto st_case_73
		case 12:
			goto st_case_12
		case 74:
			goto st_case_74
		case 13:
			goto st_case_13
		case 75:
			goto st_case_75
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 14:
			goto st_case_14
		case 78:
			goto st_case_78
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 81:
			goto st_case_81
		case 82:
			goto st_case_82
		case 15:
			goto st_case_15
		case 83:
			goto st_case_83
		case 16:
			goto st_case_16
		case 84:
			goto st_case_84
		case 85:
			goto st_case_85
		case 86:
			goto st_case_86
		case 87:
			goto st_case_87
		case 88:
			goto st_case_88
		case 17:
			goto st_case_17
		case 89:
			goto st_case_89
		case 90:
			goto st_case_90
		case 91:
			goto st_case_91
		case 18:
			goto st_case_18
		case 92:
			goto st_case_92
		case 19:
			goto st_case_19
		case 93:
			goto st_case_93
		case 20:
			goto st_case_20
		case 94:
			goto st_case_94
		case 95:
			goto st_case_95
		case 96:
			goto st_case_96
		case 97:
			goto st_case_97
		case 21:
			goto st_case_21
		case 98:
			goto st_case_98
		case 99:
			goto st_case_99
		case 100:
			goto st_case_100
		case 101:
			goto st_case_101
		case 102:
			goto st_case_102
		case 103:
			goto st_case_103
		case 104:
			goto st_case_104
		case 105:
			goto st_case_105
		case 106:
			goto st_case_106
		case 22:
			goto st_case_22
		case 107:
			goto st_case_107
		case 23:
			goto st_case_23
		case 108:
			goto st_case_108
		case 109:
			goto st_case_109
		case 110:
			goto st_case_110
		case 111:
			goto st_case_111
		case 112:
			goto st_case_112
		case 24:
			goto st_case_24
		case 113:
			goto st_case_113
		case 114:
			goto st_case_114
		case 115:
			goto st_case_115
		case 25:
			goto st_case_25
		case 116:
			goto st_case_116
		case 26:
			goto st_case_26
		case 117:
			goto st_case_117
		case 27:
			goto st_case_27
		case 118:
			goto st_case_118
		case 119:
			goto st_case_119
		case 120:
			goto st_case_120
		case 121:
			goto st_case_121
		case 28:
			goto st_case_28
		case 122:
			goto st_case_122
		case 123:
			goto st_case_123
		case 124:
			goto st_case_124
		case 125:
			goto st_case_125
		case 126:
			goto st_case_126
		case 29:
			goto st_case_29
		case 127:
			goto st_case_127
		case 128:
			goto st_case_128
		case 129:
			goto st_case_129
		case 130:
			goto st_case_130
		case 131:
			goto st_case_131
		case 132:
			goto st_case_132
		case 133:
			goto st_case_133
		case 30:
			goto st_case_30
		case 134:
			goto st_case_134
		case 135:
			goto st_case_135
		case 136:
			goto st_case_136
		case 137:
			goto st_case_137
		}
		goto st_out
	tr0:
//line indic_machine.rl:65
		p = (te) - 1
		{
			foundSyllable(IndicConsonantSyllable)
		}
		goto st31
	tr9:
//line indic_machine.rl:66
		p = (te) - 1
		{
			foundSyllable(IndicVowelSyllable)
		}
		goto st31
	tr19:
//line indic_machine.rl:70
		p = (te) - 1
		{
			foundSyllable(IndicBrokenCluster)
			hasBroken = true
		}
		goto st31
	tr26:
//line NONE:1
		switch act {
		case 1:
			{
				p = (te) - 1
				foundSyllable(IndicConsonantSyllable)
			}
		case 5:
			{
				p = (te) - 1
				foundSyllable(IndicNonIndicCluster)
			}
		case 6:
			{
				p = (te) - 1
				foundSyllable(IndicBrokenCluster)
				hasBroken = true
			}
		case 7:
			{
				p = (te) - 1
				foundSyllable(IndicNonIndicCluster)
			}
		}

		goto st31
	tr29:
//line indic_machine.rl:67
		p = (te) - 1
		{
			foundSyllable(IndicStandaloneCluster)
		}
		goto st31
	tr39:
//line indic_machine.rl:68
		p = (te) - 1
		{
			foundSyllable(IndicSymbolCluster)
		}
		goto st31
	tr41:
//line indic_machine.rl:71
		te = p + 1
		{
			foundSyllable(IndicNonIndicCluster)
		}
		goto st31
	tr56:
//line indic_machine.rl:65
		te = p
		p--
		{
			foundSyllable(IndicConsonantSyllable)
		}
		goto st31
	tr76:
//line indic_machine.rl:66
		te = p
		p--
		{
			foundSyllable(IndicVowelSyllable)
		}
		goto st31
	tr101:
//line indic_machine.rl:70
		te = p
		p--
		{
			foundSyllable(IndicBrokenCluster)
			hasBroken = true
		}
		goto st31
	tr118:
//line indic_machine.rl:71
		te = p
		p--
		{
			foundSyllable(IndicNonIndicCluster)
		}
		goto st31
	tr119:
//line indic_machine.rl:67
		te = p
		p--
		{
			foundSyllable(IndicStandaloneCluster)
		}
		goto st31
	tr146:
//line indic_machine.rl:68
		te = p
		p--
		{
			foundSyllable(IndicSymbolCluster)
		}
		goto st31
	st31:
//line NONE:1
		ts = 0

		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
//line NONE:1
		ts = p

//line indic_machine.go:447
		switch data[p] {
		case 1:
			goto tr42
		case 2:
			goto tr43
		case 3:
			goto tr44
		case 4:
			goto st81
		case 5:
			goto tr46
		case 6:
			goto tr47
		case 7:
			goto tr22
		case 8:
			goto tr23
		case 9:
			goto st85
		case 12:
			goto tr24
		case 13:
			goto tr22
		case 14:
			goto tr50
		case 15:
			goto tr51
		case 16:
			goto tr52
		case 17:
			goto tr53
		case 18:
			goto st137
		case 57:
			goto tr55
		}
		if 10 <= data[p] && data[p] <= 11 {
			goto tr49
		}
		goto tr41
	tr42:
//line NONE:1
		te = p + 1

		goto st32
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
//line indic_machine.go:498
		switch data[p] {
		case 3:
			goto tr57
		case 4:
			goto st35
		case 5:
			goto st6
		case 6:
			goto tr60
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 12:
			goto tr8
		case 13:
			goto tr4
		case 16:
			goto tr62
		case 57:
			goto st46
		}
		goto tr56
	tr57:
//line NONE:1
		te = p + 1

		goto st33
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
//line indic_machine.go:534
		switch data[p] {
		case 3:
			goto tr63
		case 4:
			goto st35
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 13:
			goto tr4
		case 16:
			goto tr62
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st1
		}
		goto tr56
	tr63:
//line NONE:1
		te = p + 1

		goto st34
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
//line indic_machine.go:567
		switch data[p] {
		case 4:
			goto st35
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 13:
			goto tr4
		case 16:
			goto tr62
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st1
		}
		goto tr56
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
		switch data[p] {
		case 1:
			goto tr42
		case 5:
			goto tr65
		case 6:
			goto tr66
		case 8:
			goto st37
		case 9:
			goto st38
		case 15:
			goto tr42
		case 57:
			goto st37
		}
		goto tr56
	tr65:
//line NONE:1
		te = p + 1

		goto st36
	st36:
		if p++; p == pe {
			goto _test_eof36
		}
	st_case_36:
//line indic_machine.go:620
		switch data[p] {
		case 8:
			goto st37
		case 9:
			goto st38
		case 57:
			goto st37
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st0
		}
		goto tr56
	st0:
		if p++; p == pe {
			goto _test_eof0
		}
	st_case_0:
		switch data[p] {
		case 8:
			goto st37
		case 57:
			goto st37
		}
		goto tr0
	st37:
		if p++; p == pe {
			goto _test_eof37
		}
	st_case_37:
		switch data[p] {
		case 5:
			goto st38
		case 8:
			goto st39
		case 9:
			goto st38
		case 57:
			goto st39
		}
		goto tr56
	st38:
		if p++; p == pe {
			goto _test_eof38
		}
	st_case_38:
		if data[p] == 9 {
			goto st38
		}
		goto tr56
	st39:
		if p++; p == pe {
			goto _test_eof39
		}
	st_case_39:
		switch data[p] {
		case 5:
			goto st38
		case 9:
			goto st38
		}
		goto tr56
	tr66:
//line NONE:1
		te = p + 1

		goto st40
	st40:
		if p++; p == pe {
			goto _test_eof40
		}
	st_case_40:
//line indic_machine.go:692
		switch data[p] {
		case 1:
			goto tr42
		case 3:
			goto tr69
		case 8:
			goto st37
		case 9:
			goto st38
		case 15:
			goto tr42
		case 57:
			goto st37
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st0
		}
		goto tr56
	tr69:
//line NONE:1
		te = p + 1

		goto st41
	st41:
		if p++; p == pe {
			goto _test_eof41
		}
	st_case_41:
//line indic_machine.go:721
		switch data[p] {
		case 1:
			goto tr42
		case 8:
			goto st37
		case 9:
			goto st38
		case 15:
			goto tr42
		case 57:
			goto st37
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st0
		}
		goto tr56
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 4:
			goto tr2
		case 7:
			goto tr4
		case 8:
			goto st46
		case 13:
			goto tr4
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st2
		}
		goto tr0
	tr2:
//line NONE:1
		te = p + 1

		goto st42
	st42:
		if p++; p == pe {
			goto _test_eof42
		}
	st_case_42:
//line indic_machine.go:769
		switch data[p] {
		case 1:
			goto tr42
		case 5:
			goto st0
		case 6:
			goto tr66
		case 8:
			goto st37
		case 9:
			goto st38
		case 15:
			goto tr42
		case 57:
			goto st37
		}
		goto tr56
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 7:
			goto tr4
		case 8:
			goto st4
		case 13:
			goto tr4
		case 57:
			goto st4
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st2
		}
		goto tr0
	tr4:
//line NONE:1
		te = p + 1

		goto st43
	st43:
		if p++; p == pe {
			goto _test_eof43
		}
	st_case_43:
//line indic_machine.go:816
		switch data[p] {
		case 3:
			goto tr70
		case 4:
			goto tr71
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 13:
			goto tr4
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st3
		}
		goto tr56
	tr70:
//line NONE:1
		te = p + 1

		goto st44
	st44:
		if p++; p == pe {
			goto _test_eof44
		}
	st_case_44:
//line indic_machine.go:847
		switch data[p] {
		case 4:
			goto tr71
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 13:
			goto tr4
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st3
		}
		goto tr56
	tr71:
//line NONE:1
		te = p + 1

		goto st45
	st45:
		if p++; p == pe {
			goto _test_eof45
		}
	st_case_45:
//line indic_machine.go:876
		switch data[p] {
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 13:
			goto tr4
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st3
		}
		goto tr56
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		switch data[p] {
		case 7:
			goto tr4
		case 8:
			goto st46
		case 13:
			goto tr4
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st2
		}
		goto tr0
	st46:
		if p++; p == pe {
			goto _test_eof46
		}
	st_case_46:
		switch data[p] {
		case 5:
			goto st38
		case 8:
			goto st39
		case 9:
			goto st38
		case 13:
			goto tr4
		case 57:
			goto st39
		}
		goto tr56
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		if data[p] == 13 {
			goto tr4
		}
		goto tr0
	tr62:
//line NONE:1
		te = p + 1

		goto st47
	st47:
		if p++; p == pe {
			goto _test_eof47
		}
	st_case_47:
//line indic_machine.go:949
		switch data[p] {
		case 4:
			goto st48
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 13:
			goto tr4
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st5
		}
		goto tr56
	st48:
		if p++; p == pe {
			goto _test_eof48
		}
	st_case_48:
		switch data[p] {
		case 5:
			goto tr65
		case 6:
			goto tr75
		case 8:
			goto st37
		case 9:
			goto st38
		case 57:
			goto st37
		}
		goto tr56
	tr75:
//line NONE:1
		te = p + 1

		goto st49
	st49:
		if p++; p == pe {
			goto _test_eof49
		}
	st_case_49:
//line indic_machine.go:996
		switch data[p] {
		case 3:
			goto tr65
		case 8:
			goto st37
		case 9:
			goto st38
		case 57:
			goto st37
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st0
		}
		goto tr56
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch data[p] {
		case 4:
			goto tr7
		case 7:
			goto tr4
		case 8:
			goto st46
		case 13:
			goto tr4
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st2
		}
		goto tr0
	tr7:
//line NONE:1
		te = p + 1

		goto st50
	st50:
		if p++; p == pe {
			goto _test_eof50
		}
	st_case_50:
//line indic_machine.go:1042
		switch data[p] {
		case 5:
			goto st0
		case 6:
			goto tr75
		case 8:
			goto st37
		case 9:
			goto st38
		case 57:
			goto st37
		}
		goto tr56
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 4:
			goto tr2
		case 7:
			goto tr4
		case 8:
			goto st46
		case 12:
			goto tr8
		case 13:
			goto tr4
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st2
		}
		goto tr0
	tr8:
//line NONE:1
		te = p + 1

		goto st51
	st51:
		if p++; p == pe {
			goto _test_eof51
		}
	st_case_51:
//line indic_machine.go:1089
		switch data[p] {
		case 3:
			goto tr57
		case 4:
			goto st35
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 13:
			goto tr4
		case 16:
			goto tr62
		case 57:
			goto st46
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st1
		}
		goto tr56
	tr60:
//line NONE:1
		te = p + 1

		goto st52
	st52:
		if p++; p == pe {
			goto _test_eof52
		}
	st_case_52:
//line indic_machine.go:1122
		switch data[p] {
		case 3:
			goto tr57
		case 4:
			goto st35
		case 5:
			goto st6
		case 6:
			goto st1
		case 7:
			goto tr4
		case 8:
			goto st46
		case 9:
			goto st38
		case 12:
			goto tr8
		case 13:
			goto tr4
		case 16:
			goto tr62
		case 57:
			goto st46
		}
		goto tr56
	tr43:
//line NONE:1
		te = p + 1

		goto st53
	st53:
		if p++; p == pe {
			goto _test_eof53
		}
	st_case_53:
//line indic_machine.go:1158
		switch data[p] {
		case 3:
			goto tr77
		case 4:
			goto st56
		case 5:
			goto st14
		case 6:
			goto tr80
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 12:
			goto tr18
		case 13:
			goto tr12
		case 16:
			goto tr82
		case 57:
			goto st69
		}
		goto tr76
	tr77:
//line NONE:1
		te = p + 1

		goto st54
	st54:
		if p++; p == pe {
			goto _test_eof54
		}
	st_case_54:
//line indic_machine.go:1194
		switch data[p] {
		case 3:
			goto tr83
		case 4:
			goto st56
		case 5:
			goto st7
		case 6:
			goto tr80
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 13:
			goto tr12
		case 16:
			goto tr82
		case 57:
			goto st69
		}
		goto tr76
	tr83:
//line NONE:1
		te = p + 1

		goto st55
	st55:
		if p++; p == pe {
			goto _test_eof55
		}
	st_case_55:
//line indic_machine.go:1228
		switch data[p] {
		case 4:
			goto st56
		case 5:
			goto st7
		case 6:
			goto tr80
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 13:
			goto tr12
		case 16:
			goto tr82
		case 57:
			goto st69
		}
		goto tr76
	st56:
		if p++; p == pe {
			goto _test_eof56
		}
	st_case_56:
		switch data[p] {
		case 1:
			goto tr85
		case 5:
			goto tr86
		case 6:
			goto tr87
		case 8:
			goto st61
		case 9:
			goto st62
		case 15:
			goto tr85
		case 57:
			goto st61
		}
		goto tr76
	tr85:
//line NONE:1
		te = p + 1

		goto st57
	st57:
		if p++; p == pe {
			goto _test_eof57
		}
	st_case_57:
//line indic_machine.go:1282
		switch data[p] {
		case 3:
			goto tr88
		case 4:
			goto st56
		case 5:
			goto st13
		case 6:
			goto tr90
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 12:
			goto tr17
		case 13:
			goto tr12
		case 16:
			goto tr82
		case 57:
			goto st69
		}
		goto tr76
	tr88:
//line NONE:1
		te = p + 1

		goto st58
	st58:
		if p++; p == pe {
			goto _test_eof58
		}
	st_case_58:
//line indic_machine.go:1318
		switch data[p] {
		case 3:
			goto tr91
		case 4:
			goto st56
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 13:
			goto tr12
		case 16:
			goto tr82
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st7
		}
		goto tr76
	tr91:
//line NONE:1
		te = p + 1

		goto st59
	st59:
		if p++; p == pe {
			goto _test_eof59
		}
	st_case_59:
//line indic_machine.go:1351
		switch data[p] {
		case 4:
			goto st56
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 13:
			goto tr12
		case 16:
			goto tr82
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st7
		}
		goto tr76
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 4:
			goto tr10
		case 7:
			goto tr12
		case 8:
			goto st69
		case 13:
			goto tr12
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st9
		}
		goto tr9
	tr10:
//line NONE:1
		te = p + 1

		goto st60
	st60:
		if p++; p == pe {
			goto _test_eof60
		}
	st_case_60:
//line indic_machine.go:1403
		switch data[p] {
		case 1:
			goto tr85
		case 5:
			goto st8
		case 6:
			goto tr87
		case 8:
			goto st61
		case 9:
			goto st62
		case 15:
			goto tr85
		case 57:
			goto st61
		}
		goto tr76
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		switch data[p] {
		case 8:
			goto st61
		case 57:
			goto st61
		}
		goto tr9
	st61:
		if p++; p == pe {
			goto _test_eof61
		}
	st_case_61:
		switch data[p] {
		case 5:
			goto st62
		case 8:
			goto st63
		case 9:
			goto st62
		case 57:
			goto st63
		}
		goto tr76
	st62:
		if p++; p == pe {
			goto _test_eof62
		}
	st_case_62:
		if data[p] == 9 {
			goto st62
		}
		goto tr76
	st63:
		if p++; p == pe {
			goto _test_eof63
		}
	st_case_63:
		switch data[p] {
		case 5:
			goto st62
		case 9:
			goto st62
		}
		goto tr76
	tr87:
//line NONE:1
		te = p + 1

		goto st64
	st64:
		if p++; p == pe {
			goto _test_eof64
		}
	st_case_64:
//line indic_machine.go:1480
		switch data[p] {
		case 1:
			goto tr85
		case 3:
			goto tr94
		case 8:
			goto st61
		case 9:
			goto st62
		case 15:
			goto tr85
		case 57:
			goto st61
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st8
		}
		goto tr76
	tr94:
//line NONE:1
		te = p + 1

		goto st65
	st65:
		if p++; p == pe {
			goto _test_eof65
		}
	st_case_65:
//line indic_machine.go:1509
		switch data[p] {
		case 1:
			goto tr85
		case 8:
			goto st61
		case 9:
			goto st62
		case 15:
			goto tr85
		case 57:
			goto st61
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st8
		}
		goto tr76
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		switch data[p] {
		case 7:
			goto tr12
		case 8:
			goto st11
		case 13:
			goto tr12
		case 57:
			goto st11
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st9
		}
		goto tr9
	tr12:
//line NONE:1
		te = p + 1

		goto st66
	st66:
		if p++; p == pe {
			goto _test_eof66
		}
	st_case_66:
//line indic_machine.go:1555
		switch data[p] {
		case 3:
			goto tr95
		case 4:
			goto tr96
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 13:
			goto tr12
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st10
		}
		goto tr76
	tr95:
//line NONE:1
		te = p + 1

		goto st67
	st67:
		if p++; p == pe {
			goto _test_eof67
		}
	st_case_67:
//line indic_machine.go:1586
		switch data[p] {
		case 4:
			goto tr96
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 13:
			goto tr12
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st10
		}
		goto tr76
	tr96:
//line NONE:1
		te = p + 1

		goto st68
	st68:
		if p++; p == pe {
			goto _test_eof68
		}
	st_case_68:
//line indic_machine.go:1615
		switch data[p] {
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 13:
			goto tr12
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st10
		}
		goto tr76
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		switch data[p] {
		case 7:
			goto tr12
		case 8:
			goto st69
		case 13:
			goto tr12
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st9
		}
		goto tr9
	st69:
		if p++; p == pe {
			goto _test_eof69
		}
	st_case_69:
		switch data[p] {
		case 5:
			goto st62
		case 8:
			goto st63
		case 9:
			goto st62
		case 13:
			goto tr12
		case 57:
			goto st63
		}
		goto tr76
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		if data[p] == 13 {
			goto tr12
		}
		goto tr9
	tr82:
//line NONE:1
		te = p + 1

		goto st70
	st70:
		if p++; p == pe {
			goto _test_eof70
		}
	st_case_70:
//line indic_machine.go:1688
		switch data[p] {
		case 4:
			goto st71
		case 7:
			goto tr12
		case 8:
			goto st69
		case 9:
			goto st62
		case 13:
			goto tr12
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st12
		}
		goto tr76
	st71:
		if p++; p == pe {
			goto _test_eof71
		}
	st_case_71:
		switch data[p] {
		case 5:
			goto tr86
		case 6:
			goto tr100
		case 8:
			goto st61
		case 9:
			goto st62
		case 57:
			goto st61
		}
		goto tr76
	tr86:
//line NONE:1
		te = p + 1

		goto st72
	st72:
		if p++; p == pe {
			goto _test_eof72
		}
	st_case_72:
//line indic_machine.go:1735
		switch data[p] {
		case 8:
			goto st61
		case 9:
			goto st62
		case 57:
			goto st61
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st8
		}
		goto tr76
	tr100:
//line NONE:1
		te = p + 1

		goto st73
	st73:
		if p++; p == pe {
			goto _test_eof73
		}
	st_case_73:
//line indic_machine.go:1758
		switch data[p] {
		case 3:
			goto tr86
		case 8:
			goto st61
		case 9:
			goto st62
		case 57:
			goto st61
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st8
		}
		goto tr76
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 4:
			goto tr16
		case 7:
			goto tr12
		case 8:
			goto st69
		case 13:
			goto tr12
		case 57:
			goto st69
		}
		if 5 <= data[p] && data[p] <= 6 {
			goto st9
		}
		goto tr9
	tr16:
//line NONE:1
		te = p + 1
